--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
