--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,7 +14,10 @@
     "@mui/material": "^6.4.1",
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "char": "^1.0.2",
+    "chart.js": "^4.4.7",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
